CKS-Walk-Thru-001/Sample-Yaml-Code/4-apparmor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apparmor-pod
  namespace: secdemo
  annotations:
    container.apparmor.security.beta.kubernetes.io/nginx: localhost/deny-write-tmp
spec:
  containers:
  - name: nginx
    image: nginx
    command: ["sleep", "3600"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
