CKS-Walk-Thru-001/Sample-Yaml-Code/netpol-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-client
  namespace: netpol-demo
  labels:
    app: client
spec:
  containers:
  - name: bb
    image: busybox
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-server
  namespace: netpol-demo
  labels:
    app: web
spec:
  containers:
  - name: nginx
    image: nginx
