CKS-Walk-Thru-001/Sample-Yaml-Code/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-policy
  namespace: netpol-demo
spec:
  podSelector: {}
  policyTypes:
  - Ingress
