CKS-Walk-Thru-001/Sample-Yaml-Code/disallow-privileged.yaml
# disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: enforce
  rules:
    - name: check-privileged
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Privileged containers are not allowed!"
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: "false"
