CKS-Walk-Thru-001/Sample-Yaml-Code/privileged-container-template.yaml
# templates/privileged-container-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowedprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowedPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowedprivileged

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := "Privileged containers are not allowed"
        }
